# MicroHack-AppInnovation

./: .gitignore  MicroHack-AppInnovation.code-workspace  README.md  config.tfvars.example
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: simple.yaml
baseInfra/: .gitignore  README.md
baseInfra/bicep/: main.bicep  main.bicepparam  userInfra.bicep  workload.bicep
baseInfra/github/: .env.sample  README.md  main.py  pyproject.toml  users.yaml
baseInfra/scripts/: App_install.ps1  Dev_install_initial.ps1  Dev_install_post_reboot.ps1  SQL_install.ps1  delete_all_rg.sh  setup.ps1
baseInfra/terraform/: .gitignore  .terraform.lock.hcl  README.md  config.auto.tfvars  config.tfvars.example  import_existing_providers.ps1  main.tf  outputs.tf  providers.tf  variables.tf
challenges/ch01/: README.md
challenges/ch02/: README.md
challenges/ch03/: README.md
challenges/ch04/: README.md
challenges/ch05-enterprise/: README.md
challenges/ch05-innovation/: README.md
data/: catalog.json  categories.json
dataGenerator/: .env.sample  README.md  main.py  prune_missing_images.py  pyproject.toml
docs/: CommonErrors.md  Design.md  ImplementationLog.md
dotnet/: LegoCatalog.sln  README.md
dotnet/src/LegoCatalog.App/: App.razor  LegoCatalog.App.csproj  Program.cs  _Imports.razor  appsettings.json
solutions/ch01/: Dockerfile  README.md
solutions/ch01/bicep/: README.md  main.bicep  main.bicepparam
solutions/ch02/: README.md
solutions/ch03/: README.md
solutions/ch03/bicep/: main.bicep  main.bicepparam
solutions/ch04/: README.md
(+42 files in other folders)
