[project]
name = "datagenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"python-dotenv>=1.0.1",
	"pydantic>=2.7.0",
	"jsonschema>=4.21.0",
	"tqdm>=4.66.0",
	"openai>=1.43.0"
]

[project.scripts]
lego-data-generator = "main:cli"

[tool.uv]
dev-dependencies = []
